@@ -28,10 +28,18 @@ The rules for this file:
 	     more flexible than Writer.write_next_timestep()
          * new attributes residues and segments for AtomGroup to give 
            access to the list of residue/segment objects of the group 
-	 * new special dihedral angle selections defined for Residue
-           class to simplify analysis of backbone torsions
          * new exception NoDataError; raised when creation of an empty
 	   AtomGroup is attempted
+         * improvements to Residue, ResidueGroup and Segment classes 
+           - documented accessing residues from Segment as
+             Segment.r<resid>; resid is 1-based -- BREAKS OLD CODE 
+	     that relied on this being 0-based  
+           - can write from Residue, ResidueGroup and Segment (Issue 46)
+           - residue name attribute of a Segment now consistently
+             returns a ResidueGroup (Issue 47) -- MIGHT BREAK OLD CODE
+           - added documentation and examples in the doc strings
+	   - new special dihedral angle selections defined for Residue
+             class to simplify analysis of backbone torsions
 
 09/19/10 orbeckst
 	* quick-fix release 0.6.4.1
